just a bunch of stuff, I don't remember anymore

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -13,6 +13,16 @@ program.composite8.enabled=TAA_UPSCALING
 
 version.1.16.5=G6
 
+screen.columns=2
+screen.Tonemapping.columns=3
+screen.Shadows.columns=3
+screen.Advanced.columns=3
+screen.Wavy_stuff.columns=1
+screen.Reflections.columns=1
+screen.POM.columns=2
+screen.Camera.columns=3
+
+
 #Get the correct alpha value : S_A*(1-DST_A)+DST_A
 blend.gbuffers_terrain=off
 blend.gbuffers_textured= SRC_ALPHA ONE_MINUS_SRC_ALPHA ONE_MINUS_DST_ALPHA ONE
@@ -37,7 +47,7 @@ alphaTest.gbuffers_skytextured=false
 
 sliders=SPEC_SSR_QUALITY RENDER_SCALE_MIN RENDER_SCALE_MAX BLOOMY_FOG FOG_RAIN_MULTIPLIER FOG_TOD_MULTIPLIER CLOUDY_FOG_AMOUNT BASE_FOG_AMOUNT WAVY_SPEED WAVY_STRENGTH ANTI_GHOSTING BLOOM_STRENGTH Underwater_Fog_Density shadowDistance shadowDistanceRenderMul FinalR FinalG FinalB Ambient_Mult Sky_Brightness fog_coefficientMieR fog_coefficientMieG fog_coefficientMieB sun_illuminance sunColorG sunColorB sunColorR sky_mieg sky_coefficientMieB sky_coefficientMieG sky_coefficientMieR sky_coefficientRayleighB sky_coefficientRayleighG sky_coefficientRayleighR CLOUDS_QUALITY EXPOSURE_MULTIPLIER MIN_LIGHT_AMOUNT TORCH_R TORCH_G TORCH_B TORCH_AMOUNT shadowMapResolution sunPathRotation SKY_BRIGHTNESS_DAY SKY_BRIGHTNESS_NIGHT BLEND_FACTOR FLICKER_REDUCTION MOTION_REJECTION VL_SAMPLES Exposure_Speed POM_MAP_RES POM_DEPTH MAX_ITERATIONS MAX_DIST SSR_STEPS ambientOcclusionLevel SEA_LEVEL ATMOSPHERIC_DENSITY CLOUDS_SHADOWS_STRENGTH moon_illuminance moonColorR moonColorG moonColorB fog_mieg1 fog_mieg2 fog_coefficientRayleighR fog_coefficientRayleighG Emissive_Strength Texture_MipMap_Bias SATURATION Manual_exposure_value focal aperture MANUAL_FOCUS SHADOW_FILTER_SAMPLE_COUNT Max_Filter_Depth VPS_Search_Samples Min_Shadow_Filter_Radius Max_Shadow_Filter_Radius SSAO_SAMPLES Water_Top_Layer fog_coefficientRayleighB SHARPENING rayMarchSampleCount Dirt_Mie_Phase Dirt_Amount Dirt_Scatter_R Dirt_Scatter_G Dirt_Scatter_B Dirt_Absorb_R Dirt_Absorb_G Dirt_Absorb_B Water_Absorb_R Water_Absorb_G Water_Absorb_B Purkinje_strength Purkinje_strength Purkinje_R Purkinje_G Purkinje_B DoF_Adaptation_Speed Purkinje_Multiplier CROSSTALK RENDER_SCALE_X RENDER_SCALE_Y VL_RENDER_RESOLUTION BLOOM_QUALITY VL_RENDER_RESOLUTION RAY_COUNT STEPS STEP_LENGTH cloud_LevelOfDetail cloud_ShadowLevelOfDetail cloud_LevelOfDetailLQ cloud_ShadowLevelOfDetailLQ minRayMarchSteps maxRayMarchSteps minRayMarchStepsLQ maxRayMarchStepsLQ cloudDensity cloudCoverage fbmAmount fbmPower1 fbmPower2 cloudMieG cloudMieG2 cloudMie2Multiplier
 
-screen=[Atmospherics] [TAA_OPTIONS] [Lighting] [Camera] [Shading] [Wavy_stuff] [Water_and_transparencies]
+screen= <profile> <emtpy> [Atmospherics] [TAA_OPTIONS] [Lighting] [Camera] [Shading] [Wavy_stuff] [Water_and_transparencies] [DEV] 
 screen.Wavy_stuff = WAVY_STRENGTH WAVY_SPEED WAVY_PLANTS
 screen.Atmospherics= SEA_LEVEL  VL_SAMPLES   [Clouds] [Fog_Color] [Fog_Densities] BLOOMY_FOG VL_RENDER_RESOLUTION VL_Clouds_Shadows
 screen.Clouds = VOLUMETRIC_CLOUDS CLOUDS_QUALITY cloud_LevelOfDetail cloud_ShadowLevelOfDetail cloud_LevelOfDetailLQ cloud_ShadowLevelOfDetailLQ minRayMarchSteps maxRayMarchSteps minRayMarchStepsLQ maxRayMarchStepsLQ cloudDensity cloudCoverage fbmAmount fbmPower1 fbmPower2 cloudMieG cloudMieG2 cloudMie2Multiplier
@@ -46,6 +56,8 @@ screen.Fog_Color = fog_mieg1 fog_mieg2 fog_coefficientRayleighR fog_coefficientR
 screen.Water_and_transparencies = Dirt_Amount Dirt_Mie_Phase rayMarchSampleCount SCREENSPACE_REFLECTIONS SSR_STEPS USE_QUARTER_RES_DEPTH SUN_MICROFACET_SPECULAR Water_Top_Layer lightMapDepthEstimation [Advanced]
 screen.Advanced = Dirt_Scatter_R Dirt_Scatter_G Dirt_Scatter_B Dirt_Absorb_R Dirt_Absorb_G Dirt_Absorb_B Water_Absorb_R Water_Absorb_G Water_Absorb_B
 screen.TAA_OPTIONS= TAA <empty> BLEND_FACTOR CLOSEST_VELOCITY NO_CLIP TAA_UPSCALING RENDER_SCALE_X RENDER_SCALE_Y TAA_DS <empty> RENDER_SCALE_MIN RENDER_SCALE_MAX 
+
+screen.DEV=*
 
 screen.Lighting= [Torch] [Sky] [Ambient] SPEC SPECSTRENGTH SPEC_SSR_QUALITY
 screen.Torch = TORCH_R TORCH_G TORCH_B TORCH_AMOUNT Emissive_Strength
@@ -62,7 +74,7 @@ screen.POM = POM Depth_Write_POM POM_DEPTH MAX_ITERATIONS MAX_DIST AutoGenerateP
 screen.Camera = EXPOSURE_MULTIPLIER Exposure_Speed AUTO_EXPOSURE Manual_exposure_value BLOOM_STRENGTH BLOOM_QUALITY FinalR FinalG FinalB [Tonemapping]  [DepthOfField] [Purkinje_effect]
 screen.Purkinje_effect = Purkinje_strength Purkinje_strength Purkinje_R Purkinje_G Purkinje_B Purkinje_Multiplier
 screen.Tonemapping = TONEMAP USE_ACES_COLORSPACE_APPROXIMATION SATURATION CROSSTALK
-screen.DepthOfField = DOF HQ_DOF HEXAGONAL_BOKEH AUTOFOCUS focal aperture MANUAL_FOCUS FAR_BLUR_ONLY DoF_Adaptation_Speed
+screen.DepthOfField = DOF BOKEH_MODE DOF_MODE focal aperture MANUAL_FOCUS EXCLUDE_MODE DoF_Adaptation_Speed
 
 
 texture.noise=texture/noises.png
@@ -131,6 +143,13 @@ uniform.float.shadowMaxProj = 150.0/abs(sunPosY)
 uniform.float.waveScale = if(in(biome_category,CAT_OCEAN,CAT_BEACH), 1.0, 0.0)*74.0+54.0
 
 uniform.float.averageFrameTime = smooth(frameTime*10,50)
+
+
+
+
+
+profile.Normal= !ssgi_ext SSGI RAY_COUNT=2 STEPS=6  STEP_LENGTH=60 SSPTMIX1=1.0  ssgi_staturation shadowMapResolution=3172 shadowDistance=150 Min_Shadow_Filter_Radius=1.412 SHADOW_FILTER_SAMPLE_COUNT=6 Variable_Penumbra_Shadows VPS_Search_Samples=4 VL_SAMPLES=8 VOLUMETRIC_CLOUDS CLOUDS_QUALITY=0.35 SCREENSPACE_REFLECTIONS rayMarchSampleCount=4 SSR_STEPS=10  !DISABLE_ALPHA_MIPMAPS!Stochastic_Transparent_Shadows !SHADOW_DISABLE_ALPHA_MIPMAPS SCREENSPACE_CONTACT_SHADOWS  shadowDistanceRenderMul=-1.0 VOLUMETRIC_FOG 
+profile.SSPT= ssgi_ext  SSGI RAY_COUNT=6 STEPS=99 STEP_LENGTH=11 SSPTMIX1=0.1 !ssgi_staturation shadowMapResolution=3172 shadowDistance=150 Min_Shadow_Filter_Radius=1.412 SHADOW_FILTER_SAMPLE_COUNT=6 Variable_Penumbra_Shadows VPS_Search_Samples=4 VL_SAMPLES=8 VOLUMETRIC_CLOUDS CLOUDS_QUALITY=0.35 SCREENSPACE_REFLECTIONS rayMarchSampleCount=4 SSR_STEPS=10  !DISABLE_ALPHA_MIPMAPS!Stochastic_Transparent_Shadows !SHADOW_DISABLE_ALPHA_MIPMAPS SCREENSPACE_CONTACT_SHADOWS  shadowDistanceRenderMul=-1.0 VOLUMETRIC_FOG 
 
 
 
