--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -148,6 +148,7 @@ uniform.float.shadowMaxProj = 150.0/abs(sunPosY)
 uniform.float.waveScale = if(in(biome_category,CAT_OCEAN,CAT_BEACH), 1.0, 0.0)*74.0+54.0
 
 uniform.float.averageFrameTime = smooth(frameTime*10,50)
+uniform.float.fps = smooth((1/frameTime ))
 
 
 
