--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -26,7 +26,6 @@ screen.POM.columns=2
 screen.Camera.columns=3
 
 
-
 #Get the correct alpha value : S_A*(1-DST_A)+DST_A
 blend.gbuffers_terrain=off
 blend.gbuffers_textured= SRC_ALPHA ONE_MINUS_SRC_ALPHA ONE_MINUS_DST_ALPHA ONE
@@ -79,6 +78,7 @@ screen.Camera = EXPOSURE_MULTIPLIER Exposure_Speed AUTO_EXPOSURE Manual_exposure
 screen.Purkinje_effect = Purkinje_strength Purkinje_strength Purkinje_R Purkinje_G Purkinje_B Purkinje_Multiplier
 screen.Tonemapping = TONEMAP USE_ACES_COLORSPACE_APPROXIMATION SATURATION CROSSTALK
 screen.DepthOfField = DOF BOKEH_MODE DOF_MODE focal aperture MANUAL_FOCUS EXCLUDE_MODE DoF_Adaptation_Speed
+
 
 
 texture.noise=texture/noises.png
@@ -149,6 +149,7 @@ uniform.float.waveScale = if(in(biome_category,CAT_OCEAN,CAT_BEACH), 1.0, 0.0)*7
 
 uniform.float.averageFrameTime = smooth(frameTime*10,50)
 uniform.float.fps = smooth((1/frameTime ))
+uniform.float.fpsSmooth = smooth((1/frameTime ),20)
 
 
 
