--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -2,7 +2,7 @@
 block.1 = end_portal_frame dragon_egg brown_mushroom brewing_stand
 block.2 = respawn_anchor:charges=1
 block.3 = magma_block
-block.4 = blue_ice
+block.4 = 
 block.6 = sea_pickle:pickles=1:waterlogged=true
 block.7 = respawn_anchor:charges=2 redstone_torch:lit=true redstone_wall_torch:lit=true ender_chest
 block.9 = sea_pickle:pickles=2:waterlogged=true redstone_ore:lit=true
