--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -73,38 +73,111 @@ alphaTest.gbuffers_skytextured=false
 
 sliders= FILTER_STEPS SSPTBIAS SPEC_SSR_QUALITY RENDER_SCALE_MIN RENDER_SCALE_MAX BLOOMY_FOG FOG_RAIN_MULTIPLIER FOG_TOD_MULTIPLIER CLOUDY_FOG_AMOUNT BASE_FOG_AMOUNT WAVY_SPEED WAVY_STRENGTH ANTI_GHOSTING BLOOM_STRENGTH Underwater_Fog_Density shadowDistance shadowDistanceRenderMul FinalR FinalG FinalB Ambient_Mult Sky_Brightness fog_coefficientMieR fog_coefficientMieG fog_coefficientMieB sun_illuminance sunColorG sunColorB sunColorR sky_mieg sky_coefficientMieB sky_coefficientMieG sky_coefficientMieR sky_coefficientRayleighB sky_coefficientRayleighG sky_coefficientRayleighR CLOUDS_QUALITY EXPOSURE_MULTIPLIER MIN_LIGHT_AMOUNT TORCH_R TORCH_G TORCH_B TORCH_AMOUNT shadowMapResolution sunPathRotation SKY_BRIGHTNESS_DAY SKY_BRIGHTNESS_NIGHT BLEND_FACTOR FLICKER_REDUCTION MOTION_REJECTION VL_SAMPLES Exposure_Speed POM_MAP_RES POM_DEPTH MAX_ITERATIONS MAX_DIST SSR_STEPS ambientOcclusionLevel SEA_LEVEL ATMOSPHERIC_DENSITY CLOUDS_SHADOWS_STRENGTH moon_illuminance moonColorR moonColorG moonColorB fog_mieg1 fog_mieg2 fog_coefficientRayleighR fog_coefficientRayleighG Emissive_Strength Texture_MipMap_Bias SATURATION Manual_exposure_value focal aperture MANUAL_FOCUS SHADOW_FILTER_SAMPLE_COUNT Max_Filter_Depth VPS_Search_Samples Min_Shadow_Filter_Radius Max_Shadow_Filter_Radius SSAO_SAMPLES Water_Top_Layer fog_coefficientRayleighB SHARPENING rayMarchSampleCount Dirt_Mie_Phase Dirt_Amount Dirt_Scatter_R Dirt_Scatter_G Dirt_Scatter_B Dirt_Absorb_R Dirt_Absorb_G Dirt_Absorb_B Water_Absorb_R Water_Absorb_G Water_Absorb_B Purkinje_strength Purkinje_strength Purkinje_R Purkinje_G Purkinje_B DoF_Adaptation_Speed Purkinje_Multiplier CROSSTALK RENDER_SCALE_X RENDER_SCALE_Y VL_RENDER_RESOLUTION BLOOM_QUALITY VL_RENDER_RESOLUTION RAY_COUNT STEPS STEP_LENGTH cloud_LevelOfDetail cloud_ShadowLevelOfDetail cloud_LevelOfDetailLQ cloud_ShadowLevelOfDetailLQ minRayMarchSteps maxRayMarchSteps minRayMarchStepsLQ maxRayMarchStepsLQ cloudDensity cloudCoverage fbmAmount fbmPower1 fbmPower2 cloudMieG cloudMieG2 cloudMie2Multiplier
 
-screen= <profile> <emtpy> [Atmospherics] [TAA_OPTIONS] [Lighting] [Camera] [Shading] [Wavy_stuff] [Water_and_transparencies] [SSGI_Parameters] [Debug] 
-screen.Wavy_stuff = WAVY_STRENGTH WAVY_SPEED WAVY_PLANTS
-screen.Atmospherics= SEA_LEVEL  VL_SAMPLES   [Clouds] [Fog_Color] [Fog_Densities] BLOOMY_FOG VL_RENDER_RESOLUTION VL_Clouds_Shadows
-screen.Clouds = VOLUMETRIC_CLOUDS CLOUDS_QUALITY cloud_LevelOfDetail cloud_ShadowLevelOfDetail cloud_LevelOfDetailLQ cloud_ShadowLevelOfDetailLQ minRayMarchSteps maxRayMarchSteps minRayMarchStepsLQ maxRayMarchStepsLQ cloudDensity cloudCoverage fbmAmount fbmPower1 fbmPower2 cloudMieG cloudMieG2 cloudMie2Multiplier
+########## WOMSPACE MENU ###########
+
+screen.columns=1
+screen= \
+<profile> \
+[Atmosphere] \
+[Lighting] \
+[Terrain] \
+[Water] \
+[Camera] \
+[PostProcessing] \
+[Debug]
+
+# [Atmosphere] -----------
+screen.Atmosphere.columns=1
+screen.Atmosphere=[Clouds] [Fog] [Sky]
+# [Clouds]
+screen.Clouds.columns=1
+screen.Clouds=VOLUMETRIC_CLOUDS CLOUDS_QUALITY VL_Clouds_Shadows [Cloud_Quality] [Cloud_Shape] [Cloud_Shadow]
+screen.Cloud_Quality.columns=1
+screen.Cloud_Quality=cloud_LevelOfDetail cloud_LevelOfDetailLQ minRayMarchSteps minRayMarchStepsLQ maxRayMarchSteps maxRayMarchStepsLQ
+screen.Cloud_Shape.columns=1
+screen.Cloud_Shape=cloudDensity cloudCoverage fbmAmount fbmPower1 fbmPower2 cloudMieG cloudMieG2 cloudMie2Multiplier
+screen.Cloud_Shadow.columns=1
+screen.Cloud_Shadow=cloud_ShadowLevelOfDetail cloud_ShadowLevelOfDetailLQ CLOUDS_SHADOWS CLOUDS_SHADOWS_STRENGTH 
+# [Fog]
+screen.Fog.columns=1
+screen.Fog=[Fog_Color] [Fog_Densities] SEA_LEVEL VL_SAMPLES BLOOMY_FOG VL_RENDER_RESOLUTION
+screen.Fog_Densities.columns=1
 screen.Fog_Densities = FOG_RAIN_MULTIPLIER FOG_TOD_MULTIPLIER CLOUDY_FOG_AMOUNT BASE_FOG_AMOUNT ATMOSPHERIC_DENSITY Underwater_Fog_Density
+screen.Fog_Color.columns=1
 screen.Fog_Color = fog_mieg1 fog_mieg2 fog_coefficientRayleighR fog_coefficientRayleighG fog_coefficientRayleighB fog_coefficientMieR fog_coefficientMieG fog_coefficientMieB
-screen.Water_and_transparencies = Dirt_Amount Dirt_Mie_Phase rayMarchSampleCount SCREENSPACE_REFLECTIONS SSR_STEPS USE_QUARTER_RES_DEPTH SUN_MICROFACET_SPECULAR Water_Top_Layer lightMapDepthEstimation [Advanced]
-screen.Advanced = Dirt_Scatter_R Dirt_Scatter_G Dirt_Scatter_B Dirt_Absorb_R Dirt_Absorb_G Dirt_Absorb_B Water_Absorb_R Water_Absorb_G Water_Absorb_B
-screen.TAA_OPTIONS= TAA <empty> BLEND_FACTOR CLOSEST_VELOCITY NO_CLIP TAA_UPSCALING RENDER_SCALE_X RENDER_SCALE_Y TAA_DS <empty> RENDER_SCALE_MIN RENDER_SCALE_MAX 
-
-
-
-screen.Lighting= [Torch] [Sky] [Ambient] SPEC SPECSTRENGTH SPEC_SSR_QUALITY SHADOWS_ON
-screen.Torch = TORCH_R TORCH_G TORCH_B TORCH_AMOUNT Emissive_Strength
+# [Sky]
+screen.Sky.columns=1
 screen.Sky=[Sky_coefficients] [Sun_and_Moon_Colors] sunPathRotation
 screen.Sky_coefficients = Sky_Brightness sky_mieg sky_coefficientRayleighR sky_coefficientRayleighG sky_coefficientRayleighB sky_coefficientMieR sky_coefficientMieG sky_coefficientMieB
 screen.Sun_and_Moon_Colors =  sunColorR sunColorG sunColorB sun_illuminance moonColorR moonColorG moonColorB moon_illuminance
-screen.Ambient = MIN_LIGHT_AMOUNT SEPARATE_AO ambientOcclusionLevel Ambient_Mult
 
-screen.Shading =     [Shadows]  [POM] DISABLE_ALPHA_MIPMAPS Texture_MipMap_Bias  BICUBIC_UPSCALING CONTRAST_ADAPTATIVE_SHARPENING SHARPENING LABSSS
-screen.Shadows = [Filtering] SCREENSPACE_CONTACT_SHADOWS shadowMapResolution CLOUDS_SHADOWS CLOUDS_SHADOWS_STRENGTH shadowDistanceRenderMul shadowDistance SHADOW_FRUSTRUM_CULLING CAVE_LIGHT_LEAK_FIX SHADOW_DISABLE_ALPHA_MIPMAPS Stochastic_Transparent_Shadows
-screen.SSGI_Parameters = SSGI RAY_COUNT STEPS STEP_LENGTH SSPTMIX1  ssptfilter <empty> <empty> ssgi_staturation SSPTBIAS HQ SSPTambient FILTER_STEPS
+# [Lighting] -----------
+screen.Lighting.columns=1
+screen.Lighting=SHADOWS_ON [Shadows] [Torch] [Ambient] [SSGI]
+# [Shadows]
+screen.Shadows.columns=1
+screen.Shadows = [Filtering] SCREENSPACE_CONTACT_SHADOWS shadowMapResolution shadowDistanceRenderMul shadowDistance SHADOW_FRUSTRUM_CULLING CAVE_LIGHT_LEAK_FIX SHADOW_DISABLE_ALPHA_MIPMAPS Stochastic_Transparent_Shadows
+# [Filtering]
+screen.Filtering.columns=1
 screen.Filtering = Variable_Penumbra_Shadows VPS_Search_Samples Min_Shadow_Filter_Radius Max_Shadow_Filter_Radius Max_Filter_Depth SHADOW_FILTER_SAMPLE_COUNT
-screen.POM = POM Depth_Write_POM POM_DEPTH MAX_ITERATIONS MAX_DIST AutoGeneratePOMTextures
-screen.Camera = EXPOSURE_MULTIPLIER Exposure_Speed AUTO_EXPOSURE Manual_exposure_value BLOOM_STRENGTH BLOOM_QUALITY FinalR FinalG FinalB [Tonemapping]  [DepthOfField] [Purkinje_effect] <emtpy> motionblur
-screen.Purkinje_effect = Purkinje_strength Purkinje_strength Purkinje_R Purkinje_G Purkinje_B Purkinje_Multiplier
-screen.Tonemapping = TONEMAP USE_ACES_COLORSPACE_APPROXIMATION SATURATION CROSSTALK
-screen.DepthOfField = DOF BOKEH_MODE DOF_MODE focal aperture MANUAL_FOCUS EXCLUDE_MODE DoF_Adaptation_Speed
+# [Torch]
+screen.Torch.columns=1
+screen.Torch = TORCH_R TORCH_G TORCH_B TORCH_AMOUNT Emissive_Strength
+# [Ambient]
+screen.Ambient.columns=1
+screen.Ambient = MIN_LIGHT_AMOUNT SEPARATE_AO ambientOcclusionLevel Ambient_Mult
+# [SSGI]
+screen.SSGI = SSGI RAY_COUNT STEPS STEP_LENGTH SSPTMIX1  ssptfilter <empty> <empty> ssgi_staturation SSPTBIAS HQ SSPTambient FILTER_STEPS
 
-screen.misc = *
+# [Terrain] -----------
+screen.Terrain.columns=2
+screen.Terrain=SPEC [Specular] POM [POM] LABSSS [Wavy_stuff]
+# [Specular]
+screen.Specular.columns=1
+screen.Specular=SPECSTRENGTH SPEC_SSR_QUALITY
+# [POM]
+screen.POM.columns=1
+screen.POM = Depth_Write_POM POM_DEPTH MAX_ITERATIONS MAX_DIST AutoGeneratePOMTextures
+# [Wavy_stuff]
+screen.Wavy_stuff.columns=1
+screen.Wavy_stuff = WAVY_STRENGTH WAVY_SPEED WAVY_PLANTS
+
+# [Water] -----------
+screen.Water = Dirt_Amount Dirt_Mie_Phase rayMarchSampleCount SCREENSPACE_REFLECTIONS SSR_STEPS USE_QUARTER_RES_DEPTH SUN_MICROFACET_SPECULAR Water_Top_Layer lightMapDepthEstimation [Advanced]
+screen.Advanced.columns=3
+screen.Advanced = Dirt_Scatter_R Dirt_Scatter_G Dirt_Scatter_B Dirt_Absorb_R Dirt_Absorb_G Dirt_Absorb_B Water_Absorb_R Water_Absorb_G Water_Absorb_B
+
+# [Camera] -----------
+screen.Camera.columns=1
+screen.Camera=AUTO_EXPOSURE [Exposure] DOF [DepthOfField] focal aperture motionblur
+# [Exposure]
+screen.Exposure.columns=1
+screen.Exposure=EXPOSURE_MULTIPLIER Manual_exposure_value Exposure_Speed
+# [DepthOfField]
+screen.DepthOfField.columns=1
+screen.DepthOfField=BOKEH_MODE DOF_MODE MANUAL_FOCUS EXCLUDE_MODE DoF_Adaptation_Speed
+
+# [PostProcessing] -----------
+screen.PostProcessing.columns=1
+screen.PostProcessing=[TAA_OPTIONS] [Bloom] [Tonemapping] [Purkinje_effect]
+# [TAA_OPTIONS]
+screen.TAA_OPTIONS.columns=2
+screen.TAA_OPTIONS= TAA <empty> BLEND_FACTOR CLOSEST_VELOCITY NO_CLIP TAA_UPSCALING RENDER_SCALE_X RENDER_SCALE_Y TAA_DS <empty> RENDER_SCALE_MIN RENDER_SCALE_MAX 
+# [Bloom]
+screen.Bloom.columns=1
+screen.Bloom=BLOOMY_FOG BLOOM_QUALITY BLOOM_STRENGTH
+# [Purkinje_effect]
+screen.Purkinje_effect.columns=1
+screen.Purkinje_effect = Purkinje_strength Purkinje_Multiplier Purkinje_R Purkinje_G Purkinje_B
+# [Tonemapping]
+screen.Tonemapping.columns=1
+screen.Tonemapping = TONEMAP USE_ACES_COLORSPACE_APPROXIMATION SATURATION CROSSTALK FinalR FinalG FinalB
+
+# [Debug] -----------
 screen.Debug = <empty> DEBUG DEBUG_PROGRAM <empty> DEBUG_BRIGHTNESS DRAW_DEBUG_VALUE <empty>  [misc]
+screen.misc = *
 
+########## END OF WOMSPACE MENU ###########
 
 texture.noise=texture/noises.png
 texture.deferred.colortex2=texture/blueNoise.png
