some small fixes

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -159,7 +159,7 @@ screen.DepthOfField=BOKEH_MODE DOF_MODE MANUAL_FOCUS EXCLUDE_MODE DoF_Adaptation
 
 # [PostProcessing] -----------
 screen.PostProcessing.columns=1
-screen.PostProcessing=[TAA_OPTIONS] [Bloom] [Tonemapping] [Purkinje_effect]
+screen.PostProcessing=[TAA_OPTIONS] [Bloom] [Tonemapping] [Purkinje_effect] SHARPENING
 # [TAA_OPTIONS]
 screen.TAA_OPTIONS.columns=2
 screen.TAA_OPTIONS= TAA <empty> BLEND_FACTOR CLOSEST_VELOCITY NO_CLIP TAA_UPSCALING RENDER_SCALE_X RENDER_SCALE_Y TAA_DS <empty> RENDER_SCALE_MIN RENDER_SCALE_MAX 
